test/positive/BuildStdLib.java
public class BuildStdLib {
    public BuildStdLib() {
    }

    public static int test() {
        return 123;
    }
}
