test/negative/feature_array_return_suffix.java

public class feature_array_return_suffix {
  public feature_array_return_suffix() {}
  public int foo()[] { return null; }
}

